crates/sui-prover/tests/snapshots/sum_slice/sum_range.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 275
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/sum_slice/sum_range.fail.move:12:5
   │
12 │     ensures(v2_sum == ELIDEDu64.to_int()); // Should fails because sum [1,3) is 40
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/sum_slice/sum_range.fail.move:9: test_sum
